--- a/Static/style.css
+++ b/Static/style.css
@@ -2,20 +2,17 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     margin:0;
     padding:0;
-    background-color: hsl(0, 100%, 99%);
+    background-color: hsl(0, 0%, 59%);
 }
 h1{
     text-align: center;
-    color: #000000;
+    color: #00000083;
 }
-
-h1{text-decoration: ;}
-input[type=""],
 
 form{
     max-width: 400px;
     margin: 20px auto;
-    background-color: hsl(0, 0%, 100%)0%, 100%);
+    background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(161, 161, 161, 0.1);
@@ -34,4 +31,16 @@ input[type="tel"] {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+input[type="submit"]{
+    width:100%;
+    padding:10px;
+    border:none;
+    border-radius:5px;
+    background-color: #007bff;
+    color:#fff;
+    cursor:pointer;
+}
+input[type="submit"]:hover{
+    background-color:#0056b3;
 }
